# rook

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  rook.db
src/: action.rs  app.rs  applications.rs  cli.rs  database.rs  db.rs  effects.rs  event_handler.rs  events.rs  logger.rs  logging.rs  main.rs  matcher.rs  model.rs  settings.rs  tui.rs
src/common/: action.rs  app_state.rs  application.rs  events.rs  layout.rs  mod.rs  module_state.rs
src/components/: layout.rs  list.rs  mod.rs  results.rs  search.rs  util.rs  wizard.rs
src/database/: query.rs
src/db/: one.rs
src/db/migrations/: 001_initial.sqlite
src/model/: app_state.rs  input.rs  mod.rs  model.rs  module.rs  module_state.rs  search.rs  settings.rs  ui.rs
src/modules/: mod.rs  module.rs
src/modules/applications/: applications.rs  desktop.rs  desktop_files_module.rs  mod.rs
src/modules/maths/: desktop.rs  maths_module.rs
src/modules/programs/: mod.rs  programs.rs  programs_module.rs
src/search_modules/: mod.rs
src/search_modules/applications/: desktop.rs  desktop_files_module.rs
src/search_modules/maths/: maths_module.rs  mod.rs
src/search_modules/programs/: programs_module.rs
src/settings/: default_settings.toml  mod.rs  serialise.rs  settings.rs
src/ui/: mod.rs  results_box.rs  search_box.rs  ui.rs  util.rs
