[package]
name = "rook"
version = "0.1.0"
edition = "2024"



[dependencies]
color-eyre = "0.6.5"
config = "0.15.18"
dirs = "6.0.0"
ftail = "0.3.1"
ini = "1.3.0"
libc = "0.2.177"
log = "0.4.28"
maths-rs = "0.2.7"
nucleo = "0.5.0"
ratatui = { version = "0.29.0", features = ["serde", "crossterm"] }
rust-analyzer = "0.0.1"
rust_search = "2.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
shunting = "0.1.2"
signal-hook = "0.3.18"
tachyonfx = "0.20.1"
toml = "0.9.8"
xdg = "3.0.0"
