[package]
name = "rook-component"
version = "0.1.0"
edition = "2024"
description = "rook component template"
authors = ["Magicmaan <theobaker99@gmail.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.42"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
dirs = "6.0.0"
ftail = "0.3.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4.28"
maths-rs = "0.2.7"
nucleo = "0.5.0"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
rusqlite = "0.37.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
shunting = "0.1.2"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tachyonfx = "0.20.1"
term_size = "0.3.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.9.8"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-scrollview = "0.5.3"
tui-textarea = "0.7.0"
xdg = "3.0.0"
xdgkit = "3.2.5"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
